--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "pizzip": "^3.2.0",
+    "temp": "^0.9.4",
     "vue": "^3.5.24",
     "xlsx": "^0.18.5"
   },
