--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "electron": "^39.2.7",
     "electron-builder": "^26.0.12",
     "terser": "^5.44.1",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.2.4",
     "vite-plugin-electron": "^0.29.0"
   },
