增加下载模板功能

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
       "dist/**/*",
       "dist-electron/**/*",
       "electron/**/*",
+      "Excel Template.xls",
+      "Word Template.docx",
       "node_modules/temp/**/*",
       "node_modules/rimraf/**/*",
       "node_modules/glob/**/*",
